Updated AppBar behaviors, added Drawer, added links for BoilNierplate API, added POST functions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: lovelive
+name: fluttergazer
 description: A sample Flutter application that explores common application actions.
 
 # The following defines the version and build number for your application.
