--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
   transparent_image: ^1.0.0
+  flutter_bloc: ^0.21.0
+  meta: ^1.1.6
+  equatable: ^0.2.0
+  dio: ^3.0.1
 
 dev_dependencies:
   flutter_test:
